--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,8 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
+.pnpm-store/
 
 # testing
 /coverage
@@ -16,6 +12,9 @@
 # next.js
 /.next/
 /out/
+/build
+.next/
+next-env.d.ts
 
 # production
 /build
@@ -23,19 +22,60 @@
 # misc
 .DS_Store
 *.pem
+Thumbs.db
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# local env files
+.env*.local
+.env
+.env.development
+.env.test
+.env.production
 
 # vercel
 .vercel
+.vercel/
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+
+# IDE
+.idea/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+*.code-workspace
+
+# logs
+logs
+*.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Snyk
+.snyk
+
+# Bundle analyzer
+/analyze/
+
+# Cache
+.cache/
+.eslintcache
+.stylelintcache
+
+# Husky
+.husky/_
