--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,10 +33,10 @@ jobs:
       - name: Cache pnpm dependencies
         uses: actions/cache@v4
         with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          path: |
+            ~/.pnpm-store
+            node_modules
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
 
       - name: Install dependencies
         run: pnpm install
@@ -51,7 +51,7 @@ jobs:
         run: pnpm oxlint
 
       - name: Format check
-        run: pnpm prettier --check "**/*.{ts,js,json,md}"
+        run: pnpm prettier --check "**/*.{ts,tsx,json,md}"
 
       - name: Security check
         run: pnpm security-check
