--- a/package.json
+++ b/package.json
@@ -7,21 +7,31 @@
     "build": "next build",
     "start": "next start",
     "analyze": "cross-env ANALYZE=true next build",
-    "format": "prettier --write \"**/*.{ts,js,json,md}\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "prepare": "husky install",
     "test:pre-commit": "npx lint-staged && npx tsc --noEmit",
-    "oxlint": "oxlint src/**/*.{ts,js}",
+    "oxlint": "oxlint src/**/*.{ts,tsx}",
     "analyze:win": "set ANALYZE=true && next build",
     "snyk:test": "snyk test",
     "snyk:monitor": "snyk monitor",
     "snyk:wizard": "snyk wizard",
-    "security-check": "snyk test && npm audit"
+    "security-check": "snyk test && pnpm audit"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@types/animejs": "^3.1.13",
+    "animejs": "^4.0.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.487.0",
     "next": "15.3.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
@@ -47,6 +57,7 @@
     "oxlint": "^0.16.5",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "react-scan": "^0.3.3",
     "snyk": "^1.1296.1",
     "tailwindcss": "^4",
     "typescript": "^5"
