--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
     "security-check": "snyk test && pnpm audit"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.4",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@types/animejs": "^3.1.13",
     "animejs": "^4.0.1",
     "class-variance-authority": "^0.7.1",
@@ -43,8 +50,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.29.1",
-    "@typescript-eslint/parser": "^8.29.1",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
     "cross-env": "^7.0.3",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.3.0",
@@ -60,6 +67,6 @@
     "react-scan": "^0.3.3",
     "snyk": "^1.1296.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
